# fitAide

./: .gitignore  CMakeLists.txt  README.md
include/: database.hpp  exercisedialog.hpp  fitAide.hpp  mainview.hpp  routinedialog.hpp  settingsdialog.hpp  workoutview.hpp
src/: database.cpp  exercisedialog.cpp  fitAide.hpp  main.cpp  mainview.cpp  routinedialog.cpp  settingsdialog.cpp  workoutview.cpp
src/database/: database.cpp  database.hpp
src/dialogs/: exercisedialog.cpp  exercisedialog.hpp  settingsdialog.cpp  settingsdialog.hpp
src/utils/: errorhelper.cpp  errorhelper.hpp
src/views/: workoutview.cpp  workoutview.hpp
src/widgets/: exercisehead.cpp  exercisehead.hpp  exerciseinstruct.cpp  exerciseinstruct.hpp  exerciserecord.cpp  exerciserecord.hpp  exerciserecordreps.cpp  exerciserecordreps.hpp  exerciserecordset.cpp  exerciserecordset.hpp  exerciserecordwarmup.cpp  exerciserecordwarmup.hpp  exercisestatus.cpp  exercisestatus.hpp
